--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,6 @@
 name: Auto Generate Code
 
 on:
-  push:
-    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -16,18 +14,17 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
+        python-version: '3.10'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
     - name: Run Code Generator
-      run: |
-        python src/auto_generator.py
+      run: python src/generated_code.py
 
-    - name: Commit generated file
-      run: |
-        git config user.name "github-actions"
-        git config user.email "github-actions@github.com"
-        git add src/generated_code.py
-        git commit -m "Auto-generated code using GitHub Actions"
-        git push
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Run Tests
+      run: pytest tests/
+
+    
