--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,1 @@
-# tests/test_generated_code.py
-
-from src.generated_code import hello
-
-def test_hello(capsys):
-    hello()
-    captured = capsys.readouterr()
-    assert "Hello" in captured.out
+pytest
