--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,23 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Code Generator
-        run: python src/generated_code.py
+        run: |
+          echo "Checking for script: src/generated_code.py"
+          if [ -f src/generated_code.py ]; then
+            python src/generated_code.py
+          else
+            echo "❌ src/generated_code.py not found" && exit 1
+          fi
 
       - name: Run Tests
         env:
           PYTHONPATH: ${{ github.workspace }}/src
-        run: pytest tests/
+        run: |
+          if [ -d tests ]; then
+            pytest tests/
+          else
+            echo "⚠️ No tests folder found. Skipping tests."
+          fi
